Alignment Fixes & Table & Sidebar Table Element height change

--- a/src/static/scss/assetPlatformTable.scss
+++ b/src/static/scss/assetPlatformTable.scss
@@ -165,6 +165,7 @@
         }
         .tableContent {
           tr {
+            height: 100px;
             border-bottom: 1px solid #e7e7e7;
             td {
               font-size: 18px;
