--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -110,8 +110,8 @@
         max-width: 50%;
         display: flex;
         justify-content: center;
-        padding: 6px;
-        border-bottom: 2px solid transparent;
+        padding: 14px 6px;
+        border-bottom: 2px solid $vault-border-color;
         font-size: 14px;
         &.true {
           border-color: $primary-color;
@@ -148,7 +148,7 @@
         right: 0;
         overflow-y: auto;
         .coin {
-          flex: 0 0 25%;
+          height: 100px;
           display: flex;
           padding: 35px 50px;
           border-top: 0.5px solid #e7e7e7;
